kubernetes/apps/security/kubescape/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubescape
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
